Closed
Bug 1664579
Opened 5 years ago
Closed 5 years ago
Add support for VO's button rotor key
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
RESOLVED
FIXED
82 Branch
| Tracking | Status | |
|---|---|---|
| firefox82 | --- | fixed |
People
(Reporter: morgan, Assigned: morgan)
References
Details
Attachments
(1 file)
STR:
- Launch VO, make sure Buttons are enabled in the VO Utility Rotor section
- Navigate to `data:text/html,<button>hello world</button>
- Press VO+U and navigate to buttons rotor menu
Expected:
hello world button is displayed
Actual:
Nothing is there 😬
| Assignee | ||
Comment 1•5 years ago
|
||
Pushed by mreschenberg@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b9fcb56c0fa4
Add AXButtonSearchKey to rotor r=eeejay
Comment 3•5 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 5 years ago
status-firefox82:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 82 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•