Bug 1664579: Add AXButtonSearchKey to rotor r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D90135